--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20"
   },
-  "name": "hackerkernel-abhi",
+  "name": "sharad Kumar Soni",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
